- Preparation for 1.4 - update of library commons-file-upload - usage of 1.8.0_231 issues resolution - xslt import issues