@@ -101,7 +101,7 @@ public class DownloadFile extends ApplicationBasicServlet  {
                     response.setContentType("text/xml;charset=UTF-8");
                 }
                 
-                response.setContentLength((new Long(srcdoc.length())).intValue());
+                response.setContentLength((Long.valueOf(srcdoc.length())).intValue());
                 response.setHeader("Content-Disposition", "attachment; filename="+srcdoc.getName());
                                                
                 fis = new FileInputStream(srcdoc);
